--- a/Index.html
+++ b/Index.html
@@ -3,24 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Trusted Scam Recovery Experts | Crypto & Investment Refunds</title>
+  <title>Trusted Crypto & Investment Scam Recovery</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #0e1116;
-      color: #f4f4f5;
+      background-color: #0f172a;
+      color: #f1f5f9;
       line-height: 1.6;
     }
     header {
-      background: #121721;
+      background: #1e293b;
       padding: 80px 20px 40px;
       text-align: center;
     }
     header img.logo {
       width: 180px;
       margin-bottom: 20px;
+      border-radius: 8px;
     }
     header h1 {
       font-size: 2.8rem;
@@ -50,7 +51,7 @@
     h2 {
       font-size: 2rem;
       margin-bottom: 20px;
-      color: #22d3ee;
+      color: #38bdf8;
     }
     .grid {
       display: grid;
@@ -58,7 +59,7 @@
       gap: 24px;
     }
     .card {
-      background: #1f2937;
+      background: #1e293b;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.2);
@@ -69,8 +70,8 @@
       margin-bottom: 16px;
       border-radius: 6px;
       border: none;
-      background: #374151;
-      color: #f4f4f5;
+      background: #334155;
+      color: #f1f5f9;
     }
     button {
       background: #3b82f6;
@@ -80,13 +81,6 @@
       font-weight: 600;
       border-radius: 6px;
       cursor: pointer;
-    }
-    footer {
-      background: #111827;
-      text-align: center;
-      padding: 40px 10px 20px;
-      font-size: 0.9rem;
-      color: #9ca3af;
     }
     .testimonials {
       display: flex;
@@ -105,72 +99,106 @@
     }
     .trust-seals img {
       max-width: 120px;
-      margin: 0 10px;
-      opacity: 0.9;
+      margin: 10px;
+    }
+    footer {
+      background: #0f172a;
+      padding: 40px 20px;
+      color: #94a3b8;
+    }
+    footer .footer-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    footer h4 {
+      color: #f8fafc;
+      margin-bottom: 10px;
+    }
+    footer ul {
+      list-style: none;
+      padding: 0;
+    }
+    footer ul li {
+      margin-bottom: 8px;
+    }
+    footer ul li a {
+      color: #94a3b8;
+      text-decoration: none;
+    }
+    footer .bottom {
+      text-align: center;
+      margin-top: 30px;
+      font-size: 0.85rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://via.placeholder.com/180x60?text=LOGO" class="logo" alt="Site Logo">
+    <img src="https://i.imgur.com/dw4dqis.jpeg" class="logo" alt="Site Logo">
     <h1>Recover Funds from Crypto & Investment Scams</h1>
-    <p>We help victims trace stolen funds and pursue recovery from fraudulent crypto platforms, forex schemes, and romance scams.</p>
-    <a href="#contact" class="btn">Get a Free Assessment</a>
+    <p>Experts in tracing and recovering assets lost to fraudulent platforms. Crypto, forex, and romance scams — we cover them all.</p>
+    <a href="#contact" class="btn">Get Free Case Evaluation</a>
   </header>
 
   <section>
-    <h2>What We Recover</h2>
+    <h2>We Recover From</h2>
     <div class="grid">
       <div class="card">
-        <h3>Crypto Investment Scams</h3>
-        <p>Fake platforms, pump & dump, Ponzi, or rug pulls involving Bitcoin, Ethereum, or altcoins.</p>
+        <h3>Crypto Scams</h3>
+        <p>Lost crypto to fake exchanges, trading bots, or phishing links? We trace blockchain transactions globally.</p>
       </div>
       <div class="card">
-        <h3>Forex & Binary Scams</h3>
-        <p>Illegal trading platforms, false returns, withdrawal blocks, and manipulated trades.</p>
+        <h3>Fraudulent Investment Platforms</h3>
+        <p>Illegal forex & binary platforms blocking withdrawals, or promising false profits — we help recover your funds.</p>
       </div>
       <div class="card">
-        <h3>Romance + Pig Butchering</h3>
-        <p>Love scams pushing victims into fake crypto sites or sending money under false pretenses.</p>
+        <h3>Romance / Pig Butchering</h3>
+        <p>Manipulated into sending crypto to someone online? You're not alone. We'll support your financial recovery.</p>
       </div>
     </div>
   </section>
 
   <section>
-    <h2>How It Works</h2>
+    <h2>Why Clients Choose Us</h2>
     <div class="grid">
       <div class="card">
-        <h3>1. Submit Your Story</h3>
-        <p>Securely share your scam details with our team.</p>
+        <h3>Blockchain Intelligence</h3>
+        <p>Our team uses blockchain forensic tools to trace wallet flows and identify bad actors.</p>
       </div>
       <div class="card">
-        <h3>2. Fund Tracing</h3>
-        <p>We trace the crypto trail or financial path using blockchain forensics.</p>
+        <h3>Global Recovery Network</h3>
+        <p>We collaborate with legal professionals, cybercrime units, and crypto exchanges worldwide.</p>
       </div>
       <div class="card">
-        <h3>3. Recovery Support</h3>
-        <p>Legal, platform-based, or network recovery efforts based on your case.</p>
+        <h3>No Upfront Legal Fees</h3>
+        <p>We assess cases at no cost and offer fair success-based pricing for qualified victims.</p>
       </div>
     </div>
   </section>
 
   <section class="trust-seals">
-    <h2>As Featured On / Supported By</h2>
+    <h2>As Seen On / Backed By</h2>
     <div>
-      <img src="https://via.placeholder.com/120x40?text=Trustpilot" alt="Trustpilot">
-      <img src="https://via.placeholder.com/120x40?text=BBC" alt="BBC">
-      <img src="https://via.placeholder.com/120x40?text=BlockchainIntel" alt="Blockchain Intel">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Trustpilot_logo.png/200px-Trustpilot_logo.png" alt="Trustpilot">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/BBC_News_2022_%28Alt%29.svg/200px-BBC_News_2022_%28Alt%29.svg.png" alt="BBC">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Yahoo%21_Finance_logo_2021.svg/200px-Yahoo%21_Finance_logo_2021.svg.png" alt="Yahoo Finance">
     </div>
   </section>
 
   <section>
-    <h2>Testimonials</h2>
+    <h2>Client Testimonials</h2>
     <div class="testimonials">
       <div class="testimonial">
-        <p><strong>James T., UK:</strong> "They helped me recover $24,000 lost to a fake crypto site. Professional and fast."</p>
+        <p><strong>James T. (UK):</strong> "They recovered $24,000 from a Bitcoin scam I thought was gone for good. Efficient and professional!"</p>
       </div>
       <div class="testimonial">
-        <p><strong>Linda M., Canada:</strong> "I thought it was gone forever—until this team stepped in. Highly recommend."</p>
+        <p><strong>Linda M. (Canada):</strong> "Excellent service. Transparent, fast, and very supportive through the entire process."</p>
+      </div>
+      <div class="testimonial">
+        <p><strong>Ali S. (UAE):</strong> "I was scammed by a fake trading app. These guys traced everything and helped with legal steps. Life-saving!"</p>
       </div>
     </div>
   </section>
@@ -186,8 +214,32 @@
   </section>
 
   <footer>
-    &copy; 2025 Scam Recovery Experts. All rights reserved.<br>
-    Professional fund recovery services for victims of online fraud worldwide.
+    <div class="footer-grid">
+      <div>
+        <img src="https://i.imgur.com/dw4dqis.jpeg" alt="Logo" style="width: 120px; border-radius: 6px;">
+        <p>Leading crypto & investment scam recovery team with global partners and advanced tracking technology.</p>
+      </div>
+      <div>
+        <h4>Quick Links</h4>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Privacy Policy</a></li>
+        </ul>
+      </div>
+      <div>
+        <h4>Follow Us</h4>
+        <ul>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">LinkedIn</a></li>
+          <li><a href="#">WhatsApp</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="bottom">
+      &copy; 2025 FastS Recovery. All rights reserved.
+    </div>
   </footer>
 </body>
 </html>
