--- a/Index.html
+++ b/Index.html
@@ -14,9 +14,24 @@
       line-height: 1.6;
     }
     header {
-      background: #1e293b;
+      background: url('https://i.imgur.com/xuRPrKG.jpeg') center/cover no-repeat;
       padding: 80px 20px 40px;
       text-align: center;
+      position: relative;
+    }
+    header::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(15, 23, 42, 0.85);
+      z-index: 0;
+    }
+    header * {
+      position: relative;
+      z-index: 1;
     }
     header img.logo {
       width: 180px;
@@ -83,15 +98,27 @@
       cursor: pointer;
     }
     .testimonials {
-      display: flex;
-      flex-direction: column;
-      gap: 24px;
+      background: url('https://i.imgur.com/xuRPrKG.jpeg') center/cover no-repeat;
+      padding: 60px 20px;
+      border-radius: 12px;
+    }
+    .testimonials::before {
+      content: "";
+      position: absolute;
+      background: rgba(15, 23, 42, 0.85);
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
     }
     .testimonial {
-      background: #1e293b;
+      background: rgba(30, 41, 59, 0.9);
       padding: 20px;
       border-left: 4px solid #10b981;
       border-radius: 8px;
+      margin-bottom: 20px;
+      position: relative;
+      z-index: 2;
     }
     .trust-seals {
       text-align: center;
