--- a/Index.html
+++ b/Index.html
@@ -1,272 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Trusted Crypto & Investment Scam Recovery</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Crypto Asset Recovery - Recover funds from crypto scams and fraudulent investment platforms with expert support.">
+  <title>Crypto Asset Recovery | Recover Funds from Crypto Scams</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body {
+    * {
       margin: 0;
+      padding: 0;
+      box-sizing: border-box;
       font-family: 'Inter', sans-serif;
-      background-color: #0f172a;
-      color: #f1f5f9;
+    }
+    body {
       line-height: 1.6;
+      color: #222;
     }
     header {
-      background: url('https://i.imgur.com/xuRPrKG.jpeg') center/cover no-repeat;
-      padding: 80px 20px 40px;
+      background: #000;
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    header img.logo {
+      height: 50px;
+      border-radius: 12px;
+    }
+    header nav a {
+      color: white;
+      text-decoration: none;
+      margin-left: 1rem;
+      font-weight: 600;
+    }
+    .hero {
+      background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover;
+      color: white;
       text-align: center;
+      padding: 6rem 2rem;
       position: relative;
     }
-    header::before {
+    .hero::after {
       content: "";
       position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(15, 23, 42, 0.85);
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.5);
       z-index: 0;
     }
-    header * {
+    .hero h1, .hero p {
       position: relative;
       z-index: 1;
     }
-    header img.logo {
-      width: 180px;
-      margin-bottom: 20px;
-      border-radius: 8px;
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
     }
-    header h1 {
-      font-size: 2.8rem;
-      font-weight: 700;
-    }
-    header p {
+    .hero p {
       font-size: 1.2rem;
-      max-width: 600px;
-      margin: 20px auto 0;
-      color: #cbd5e1;
+      margin-bottom: 2rem;
     }
-    .btn {
-      background: #10b981;
-      color: black;
-      padding: 12px 24px;
-      border-radius: 8px;
-      margin-top: 20px;
-      display: inline-block;
-      font-weight: 600;
-      text-decoration: none;
+    .hero button {
+      background: #0f62fe;
+      border: none;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border-radius: 5px;
+      cursor: pointer;
     }
-    section {
-      padding: 60px 20px;
+    .section {
+      padding: 4rem 2rem;
       max-width: 1000px;
       margin: auto;
     }
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 20px;
-      color: #38bdf8;
+    .trusted-brands {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      margin: 2rem 0;
+      flex-wrap: wrap;
     }
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 24px;
-    }
-    .card {
-      background: #1e293b;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    }
-    input, textarea {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 16px;
-      border-radius: 6px;
-      border: none;
-      background: #334155;
-      color: #f1f5f9;
-    }
-    button {
-      background: #3b82f6;
-      padding: 12px 20px;
-      border: none;
-      color: white;
-      font-weight: 600;
-      border-radius: 6px;
-      cursor: pointer;
+    .trusted-brands img {
+      max-height: 40px;
+      margin: 0.5rem 1rem;
+      opacity: 0.8;
     }
     .testimonials {
-      background: url('https://i.imgur.com/xuRPrKG.jpeg') center/cover no-repeat;
-      padding: 60px 20px;
-      border-radius: 12px;
+      background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover;
+      color: white;
+      padding: 4rem 2rem;
+      text-align: center;
+      position: relative;
     }
     .testimonials::before {
       content: "";
       position: absolute;
-      background: rgba(15, 23, 42, 0.85);
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 0;
+    }
+    .testimonials > div {
+      position: relative;
+      z-index: 1;
     }
     .testimonial {
-      background: rgba(30, 41, 59, 0.9);
-      padding: 20px;
-      border-left: 4px solid #10b981;
-      border-radius: 8px;
-      margin-bottom: 20px;
-      position: relative;
-      z-index: 2;
+      margin: 2rem auto;
+      max-width: 700px;
+      font-style: italic;
     }
-    .trust-seals {
-      text-align: center;
-      margin-top: 40px;
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
     }
-    .trust-seals img {
-      max-width: 120px;
-      margin: 10px;
+    form input, form textarea {
+      padding: 0.75rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+    form button {
+      background: #0f62fe;
+      border: none;
+      color: white;
+      padding: 0.75rem;
+      border-radius: 4px;
+      font-size: 1rem;
+      cursor: pointer;
     }
     footer {
-      background: #0f172a;
-      padding: 40px 20px;
-      color: #94a3b8;
-    }
-    footer .footer-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      gap: 20px;
-      max-width: 1000px;
-      margin: auto;
-    }
-    footer h4 {
-      color: #f8fafc;
-      margin-bottom: 10px;
-    }
-    footer ul {
-      list-style: none;
-      padding: 0;
-    }
-    footer ul li {
-      margin-bottom: 8px;
-    }
-    footer ul li a {
-      color: #94a3b8;
-      text-decoration: none;
-    }
-    footer .bottom {
+      background: #111;
+      color: white;
+      padding: 2rem;
       text-align: center;
-      margin-top: 30px;
-      font-size: 0.85rem;
+    }
+    footer img {
+      height: 40px;
+      margin-bottom: 1rem;
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="https://i.imgur.com/dw4dqis.jpeg" class="logo" alt="Site Logo">
-    <h1>Recover Funds from Crypto & Investment Scams</h1>
-    <p>Experts in tracing and recovering assets lost to fraudulent platforms. Crypto, forex, and romance scams — we cover them all.</p>
-    <a href="#contact" class="btn">Get Free Case Evaluation</a>
+    <img src="https://i.imgur.com/icNCu9P.png" class="logo" alt="Crypto Asset Recovery">
+    <nav>
+      <a href="#">Home</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+    </nav>
   </header>
 
-  <section>
-    <h2>We Recover From</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>Crypto Scams</h3>
-        <p>Lost crypto to fake exchanges, trading bots, or phishing links? We trace blockchain transactions globally.</p>
-      </div>
-      <div class="card">
-        <h3>Fraudulent Investment Platforms</h3>
-        <p>Illegal forex & binary platforms blocking withdrawals, or promising false profits — we help recover your funds.</p>
-      </div>
-      <div class="card">
-        <h3>Romance / Pig Butchering</h3>
-        <p>Manipulated into sending crypto to someone online? You're not alone. We'll support your financial recovery.</p>
-      </div>
+  <section class="hero">
+    <h1>Crypto Asset Recovery</h1>
+    <p>Recover your lost or stolen crypto funds from scams and fraudulent investments.</p>
+    <button onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' })">Get Help Now</button>
+  </section>
+
+  <section class="section">
+    <h2>Trusted by Clients & Featured In</h2>
+    <div class="trusted-brands">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Trustpilot_logo.png" alt="Trustpilot">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/BBC_logo.png" alt="BBC">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Yahoo_Finance_Logo_2019.png" alt="Yahoo Finance">
     </div>
   </section>
 
-  <section>
-    <h2>Why Clients Choose Us</h2>
-    <div class="grid">
-      <div class="card">
-        <h3>Blockchain Intelligence</h3>
-        <p>Our team uses blockchain forensic tools to trace wallet flows and identify bad actors.</p>
-      </div>
-      <div class="card">
-        <h3>Global Recovery Network</h3>
-        <p>We collaborate with legal professionals, cybercrime units, and crypto exchanges worldwide.</p>
-      </div>
-      <div class="card">
-        <h3>No Upfront Legal Fees</h3>
-        <p>We assess cases at no cost and offer fair success-based pricing for qualified victims.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="trust-seals">
-    <h2>As Seen On / Backed By</h2>
+  <section class="testimonials">
     <div>
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/Trustpilot_logo.png/200px-Trustpilot_logo.png" alt="Trustpilot">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/BBC_News_2022_%28Alt%29.svg/200px-BBC_News_2022_%28Alt%29.svg.png" alt="BBC">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Yahoo%21_Finance_logo_2021.svg/200px-Yahoo%21_Finance_logo_2021.svg.png" alt="Yahoo Finance">
+      <h2>What Our Clients Say</h2>
+      <p class="testimonial">"Thanks to Crypto Asset Recovery, I got back over $12,000 I thought was gone forever. Quick and professional!" – Sarah M.</p>
+      <p class="testimonial">"Their team was responsive, supportive, and truly effective. Highly recommend them." – James K.</p>
     </div>
   </section>
 
-  <section>
-    <h2>Client Testimonials</h2>
-    <div class="testimonials">
-      <div class="testimonial">
-        <p><strong>James T. (UK):</strong> "They recovered $24,000 from a Bitcoin scam I thought was gone for good. Efficient and professional!"</p>
-      </div>
-      <div class="testimonial">
-        <p><strong>Linda M. (Canada):</strong> "Excellent service. Transparent, fast, and very supportive through the entire process."</p>
-      </div>
-      <div class="testimonial">
-        <p><strong>Ali S. (UAE):</strong> "I was scammed by a fake trading app. These guys traced everything and helped with legal steps. Life-saving!"</p>
-      </div>
-    </div>
-  </section>
-
-  <section id="contact">
-    <h2>Start Your Recovery</h2>
+  <section id="contact" class="section">
+    <h2>Free Case Evaluation</h2>
     <form>
-      <input type="text" name="name" placeholder="Your Name" required>
-      <input type="email" name="email" placeholder="Your Email" required>
-      <textarea name="message" rows="5" placeholder="Describe your scam experience..." required></textarea>
-      <button type="submit">Submit Case</button>
+      <input type="text" placeholder="Full Name" required>
+      <input type="email" placeholder="Email Address" required>
+      <textarea rows="5" placeholder="Describe your case..." required></textarea>
+      <button type="submit">Submit</button>
     </form>
   </section>
 
   <footer>
-    <div class="footer-grid">
-      <div>
-        <img src="https://i.imgur.com/dw4dqis.jpeg" alt="Logo" style="width: 120px; border-radius: 6px;">
-        <p>Leading crypto & investment scam recovery team with global partners and advanced tracking technology.</p>
-      </div>
-      <div>
-        <h4>Quick Links</h4>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#contact">Contact</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4>Follow Us</h4>
-        <ul>
-          <li><a href="#">Twitter</a></li>
-          <li><a href="#">LinkedIn</a></li>
-          <li><a href="#">WhatsApp</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="bottom">
-      &copy; 2025 FastS Recovery. All rights reserved.
-    </div>
+    <img src="https://i.imgur.com/icNCu9P.png" alt="Crypto Asset Recovery logo">
+    <p>&copy; 2025 Crypto Asset Recovery. All rights reserved.</p>
+    <p>Privacy Policy | Terms & Conditions</p>
   </footer>
 </body>
 </html>
