--- a/Index.html
+++ b/Index.html
@@ -76,6 +76,11 @@
       max-width: 1000px;
       margin: auto;
     }
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+      text-align: center;
+    }
     .trusted-brands {
       display: flex;
       justify-content: space-around;
@@ -87,6 +92,21 @@
       max-height: 40px;
       margin: 0.5rem 1rem;
       opacity: 0.8;
+    }
+    .features {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      text-align: center;
+    }
+    .features div {
+      padding: 1rem;
+      border: 1px solid #eee;
+      border-radius: 8px;
+    }
+    .features h3 {
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
     }
     .testimonials {
       background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover;
@@ -161,6 +181,24 @@
   </section>
 
   <section class="section">
+    <h2>What We Do</h2>
+    <div class="features">
+      <div>
+        <h3>Crypto Scam Recovery</h3>
+        <p>We trace and recover stolen or lost crypto assets using cutting-edge tools and global legal networks.</p>
+      </div>
+      <div>
+        <h3>Investment Fraud Cases</h3>
+        <p>We investigate and act on fraudulent investment platforms and Ponzi schemes that deceive investors.</p>
+      </div>
+      <div>
+        <h3>Romance Scam Support</h3>
+        <p>Helping victims recover assets lost to emotional manipulation via fraudulent online relationships.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="section">
     <h2>Trusted by Clients & Featured In</h2>
     <div class="trusted-brands">
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Trustpilot_logo.png" alt="Trustpilot">
@@ -174,6 +212,7 @@
       <h2>What Our Clients Say</h2>
       <p class="testimonial">"Thanks to Crypto Asset Recovery, I got back over $12,000 I thought was gone forever. Quick and professional!" – Sarah M.</p>
       <p class="testimonial">"Their team was responsive, supportive, and truly effective. Highly recommend them." – James K.</p>
+      <p class="testimonial">"Crypto Asset Recovery gave me peace of mind. I had no idea how to start and they guided me every step." – Daniel P.</p>
     </div>
   </section>
 
