--- a/Index.html
+++ b/Index.html
@@ -1,102 +1,235 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Crypto Asset Recovery</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Crypto Asset Recovery - Recover funds from crypto scams and fraudulent investment platforms with expert support.">
+  <title>Crypto Asset Recovery | Recover Funds from Crypto Scams</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    body { margin: 0; font-family: 'Inter', sans-serif; color: #222; background: #f9f9f9; }
-    header { background: #0a0f2c; color: white; padding: 40px 20px; text-align: center; }
-    header img { max-height: 60px; margin-bottom: 15px; }
-    .hero { padding: 60px 20px; background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover; color: white; text-align: center; }
-    .hero h1 { font-size: 2.5em; margin: 0; }
-    .hero p { font-size: 1.2em; margin-top: 15px; }
-    section { padding: 60px 20px; max-width: 1100px; margin: auto; }
-    .section-title { text-align: center; font-size: 2em; margin-bottom: 40px; }
-    .features, .testimonials, .why-us, .faq { display: grid; gap: 20px; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); }
-    .feature, .testimonial, .why-item, .faq-item { background: white; padding: 20px; border-radius: 12px; box-shadow: 0 3px 8px rgba(0,0,0,0.05); }
-    .trusted-brands { text-align: center; padding: 30px 20px; background: #fff; }
-    .trusted-brands img { height: 30px; margin: 0 15px; opacity: 0.7; }
-    form { background: white; padding: 30px; border-radius: 12px; box-shadow: 0 3px 8px rgba(0,0,0,0.05); }
-    input, textarea { width: 100%; padding: 10px; margin: 10px 0; border-radius: 6px; border: 1px solid #ccc; }
-    button { padding: 12px 20px; background: #0a0f2c; color: white; border: none; border-radius: 6px; cursor: pointer; }
-    footer { background: #0a0f2c; color: #bbb; text-align: center; padding: 40px 20px; font-size: 0.9em; }
-    .footer-links a { color: #bbb; margin: 0 10px; text-decoration: none; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Inter', sans-serif;
+    }
+    body {
+      line-height: 1.6;
+      color: #222;
+    }
+    header {
+      background: #000;
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+    header img.logo {
+      height: 50px;
+      border-radius: 12px;
+    }
+    header nav a {
+      color: white;
+      text-decoration: none;
+      margin-left: 1rem;
+      font-weight: 600;
+    }
+    .hero {
+      background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover;
+      color: white;
+      text-align: center;
+      padding: 6rem 2rem;
+      position: relative;
+    }
+    .hero::after {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      z-index: 0;
+    }
+    .hero h1, .hero p {
+      position: relative;
+      z-index: 1;
+    }
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      margin-bottom: 2rem;
+    }
+    .hero button {
+      background: #0f62fe;
+      border: none;
+      color: white;
+      padding: 0.75rem 1.5rem;
+      font-size: 1rem;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .section {
+      padding: 4rem 2rem;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .section h2 {
+      font-size: 2rem;
+      margin-bottom: 1.5rem;
+      text-align: center;
+    }
+    .trusted-brands {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      margin: 2rem 0;
+      flex-wrap: wrap;
+    }
+    .trusted-brands img {
+      max-height: 40px;
+      margin: 0.5rem 1rem;
+      opacity: 0.8;
+    }
+    .features {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      text-align: center;
+    }
+    .features div {
+      padding: 1rem;
+      border: 1px solid #eee;
+      border-radius: 8px;
+    }
+    .features h3 {
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+    .testimonials {
+      background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover;
+      color: white;
+      padding: 4rem 2rem;
+      text-align: center;
+      position: relative;
+    }
+    .testimonials::before {
+      content: "";
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 0;
+    }
+    .testimonials > div {
+      position: relative;
+      z-index: 1;
+    }
+    .testimonial {
+      margin: 2rem auto;
+      max-width: 700px;
+      font-style: italic;
+    }
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    form input, form textarea {
+      padding: 0.75rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 1rem;
+    }
+    form button {
+      background: #0f62fe;
+      border: none;
+      color: white;
+      padding: 0.75rem;
+      border-radius: 4px;
+      font-size: 1rem;
+      cursor: pointer;
+    }
+    footer {
+      background: #111;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    footer img {
+      height: 40px;
+      margin-bottom: 1rem;
+    }
   </style>
 </head>
 <body>
+  <header>
+    <img src="https://i.imgur.com/icNCu9P.png" class="logo" alt="Crypto Asset Recovery">
+    <nav>
+      <a href="#">Home</a>
+      <a href="#services">Services</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-<header>
-  <img src="https://i.imgur.com/icNCu9P.png" alt="Crypto Asset Recovery Logo" />
-  <h2>Crypto Asset Recovery</h2>
-</header>
+  <section class="hero">
+    <h1>Crypto Asset Recovery</h1>
+    <p>Recover your lost or stolen crypto funds from scams and fraudulent investments.</p>
+    <button onclick="document.getElementById('contact').scrollIntoView({ behavior: 'smooth' })">Get Help Now</button>
+  </section>
 
-<div class="hero">
-  <h1>Recover Lost or Stolen Crypto Funds</h1>
-  <p>No upfront fees. 100% confidential. Industry-leading experts in fraud recovery.</p>
-</div>
+  <section class="section">
+    <h2>What We Do</h2>
+    <div class="features">
+      <div>
+        <h3>Crypto Scam Recovery</h3>
+        <p>We trace and recover stolen or lost crypto assets using cutting-edge tools and global legal networks.</p>
+      </div>
+      <div>
+        <h3>Investment Fraud Cases</h3>
+        <p>We investigate and act on fraudulent investment platforms and Ponzi schemes that deceive investors.</p>
+      </div>
+      <div>
+        <h3>Romance Scam Support</h3>
+        <p>Helping victims recover assets lost to emotional manipulation via fraudulent online relationships.</p>
+      </div>
+    </div>
+  </section>
 
-<section>
-  <h2 class="section-title">What We Do</h2>
-  <div class="features">
-    <div class="feature"><strong>Crypto Scam Recovery</strong><p>Recover funds lost to crypto investment fraud or wallet theft.</p></div>
-    <div class="feature"><strong>Investment Fraud</strong><p>We trace and reclaim assets lost in high-yield or Ponzi-like schemes.</p></div>
-    <div class="feature"><strong>Romance Scams</strong><p>Recovery support for victims emotionally and financially exploited online.</p></div>
-  </div>
-</section>
+  <section class="section">
+    <h2>Trusted by Clients & Featured In</h2>
+    <div class="trusted-brands">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Trustpilot_logo.png" alt="Trustpilot">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/BBC_logo.png" alt="BBC">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Yahoo_Finance_Logo_2019.png" alt="Yahoo Finance">
+    </div>
+  </section>
 
-<section class="why-us">
-  <h2 class="section-title">Why Choose Us</h2>
-  <div class="why-us">
-    <div class="why-item"><strong>No Upfront Fees</strong><p>You pay nothing until we help you recover your funds.</p></div>
-    <div class="why-item"><strong>Private & Confidential</strong><p>Your information is handled securely and with complete discretion.</p></div>
-    <div class="why-item"><strong>Trusted Recovery Partners</strong><p>We work with licensed investigators and legal specialists worldwide.</p></div>
-    <div class="why-item"><strong>Track Record</strong><p>Multiple successful recoveries across global jurisdictions.</p></div>
-  </div>
-</section>
+  <section class="testimonials">
+    <div>
+      <h2>What Our Clients Say</h2>
+      <p class="testimonial">"Thanks to Crypto Asset Recovery, I got back over $12,000 I thought was gone forever. Quick and professional!" – Sarah M.</p>
+      <p class="testimonial">"Their team was responsive, supportive, and truly effective. Highly recommend them." – James K.</p>
+      <p class="testimonial">"Crypto Asset Recovery gave me peace of mind. I had no idea how to start and they guided me every step." – Daniel P.</p>
+    </div>
+  </section>
 
-<section class="trusted-brands">
-  <p>As seen on:</p>
-  <img src="https://upload.wikimedia.org/wikipedia/commons/b/bc/BBC_News_2022_%28Alt%29.svg" alt="BBC">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/6/6e/Trustpilot_logo_2022.svg" alt="Trustpilot">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/YahooFinance_Logo.png" alt="Yahoo Finance">
-</section>
+  <section id="contact" class="section">
+    <h2>Free Case Evaluation</h2>
+    <form>
+      <input type="text" placeholder="Full Name" required>
+      <input type="email" placeholder="Email Address" required>
+      <textarea rows="5" placeholder="Describe your case..." required></textarea>
+      <button type="submit">Submit</button>
+    </form>
+  </section>
 
-<section>
-  <h2 class="section-title">Testimonials</h2>
-  <div class="testimonials">
-    <div class="testimonial"><p>“I recovered over $50,000 in Bitcoin thanks to this team. Professional and honest throughout.”</p><strong>- Mark A.</strong></div>
-    <div class="testimonial"><p>“They helped me track the scammer and recover my funds without asking for a single dollar upfront.”</p><strong>- Sarah K.</strong></div>
-    <div class="testimonial"><p>“I had lost hope, but this service delivered on its promise. Highly recommended.”</p><strong>- James L.</strong></div>
-  </div>
-</section>
-
-<section class="faq">
-  <h2 class="section-title">Frequently Asked Questions</h2>
-  <div class="faq">
-    <div class="faq-item"><strong>Do I need to pay anything upfront?</strong><p>No. We only charge a success-based fee once recovery is underway.</p></div>
-    <div class="faq-item"><strong>What’s the recovery process?</strong><p>Submit your case, our team investigates, traces assets, and initiates legal recovery actions.</p></div>
-    <div class="faq-item"><strong>How long does recovery take?</strong><p>It varies, but we aim to show results within 2–6 weeks depending on case complexity.</p></div>
-  </div>
-</section>
-
-<section>
-  <h2 class="section-title">Contact Us</h2>
-  <form>
-    <input type="text" placeholder="Full Name" required>
-    <input type="email" placeholder="Email Address" required>
-    <textarea rows="5" placeholder="Describe your case..." required></textarea>
-    <button type="submit">Submit Case</button>
-  </form>
-</section>
-
-<footer>
-  <p>&copy; 2025 Crypto Asset Recovery. All rights reserved.</p>
-  <div class="footer-links">
-    <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
-  </div>
-</footer>
-
+  <footer>
+    <img src="https://i.imgur.com/icNCu9P.png" alt="Crypto Asset Recovery logo">
+    <p>&copy; 2025 Crypto Asset Recovery. All rights reserved.</p>
+    <p>Privacy Policy | Terms & Conditions</p>
+  </footer>
 </body>
 </html>
