--- a/Index.html
+++ b/Index.html
@@ -76,11 +76,6 @@
       max-width: 1000px;
       margin: auto;
     }
-    .section h2 {
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
-      text-align: center;
-    }
     .trusted-brands {
       display: flex;
       justify-content: space-around;
@@ -92,21 +87,6 @@
       max-height: 40px;
       margin: 0.5rem 1rem;
       opacity: 0.8;
-    }
-    .features {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      text-align: center;
-    }
-    .features div {
-      padding: 1rem;
-      border: 1px solid #eee;
-      border-radius: 8px;
-    }
-    .features h3 {
-      font-size: 1.2rem;
-      margin-bottom: 0.5rem;
     }
     .testimonials {
       background: url('https://i.imgur.com/xuRPrKG.jpeg') no-repeat center center/cover;
@@ -181,24 +161,6 @@
   </section>
 
   <section class="section">
-    <h2>What We Do</h2>
-    <div class="features">
-      <div>
-        <h3>Crypto Scam Recovery</h3>
-        <p>We trace and recover stolen or lost crypto assets using cutting-edge tools and global legal networks.</p>
-      </div>
-      <div>
-        <h3>Investment Fraud Cases</h3>
-        <p>We investigate and act on fraudulent investment platforms and Ponzi schemes that deceive investors.</p>
-      </div>
-      <div>
-        <h3>Romance Scam Support</h3>
-        <p>Helping victims recover assets lost to emotional manipulation via fraudulent online relationships.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="section">
     <h2>Trusted by Clients & Featured In</h2>
     <div class="trusted-brands">
       <img src="https://upload.wikimedia.org/wikipedia/commons/5/5f/Trustpilot_logo.png" alt="Trustpilot">
@@ -207,12 +169,42 @@
     </div>
   </section>
 
+  <!-- New Sections Start Here -->
+
+  <section class="section">
+    <h2>What We Do</h2>
+    <p>We specialize in helping victims of cryptocurrency scams and fraudulent investment platforms track and recover lost funds. Our expert team utilizes legal tools, blockchain analysis, and international resources to support recovery efforts quickly and securely.</p>
+  </section>
+
+  <section class="section">
+    <h2>Why Choose Us</h2>
+    <ul style="list-style: disc; padding-left: 2rem;">
+      <li>No upfront fees – we only succeed when you do</li>
+      <li>Specialized expertise in crypto fraud investigation</li>
+      <li>Secure, confidential, and legally backed recovery process</li>
+      <li>Responsive support and dedicated case managers</li>
+    </ul>
+  </section>
+
+  <section class="section">
+    <h2>Frequently Asked Questions</h2>
+    <h4>How long does recovery take?</h4>
+    <p>It depends on your case complexity, but most recoveries take 2–6 weeks on average.</p>
+    
+    <h4>Do I have to pay upfront?</h4>
+    <p>No. We operate on a success-based model. You only pay when funds are recovered.</p>
+    
+    <h4>What scams do you handle?</h4>
+    <p>We focus on crypto scams, investment frauds, fake exchanges, and phishing attacks.</p>
+  </section>
+
+  <!-- New Sections End Here -->
+
   <section class="testimonials">
     <div>
       <h2>What Our Clients Say</h2>
       <p class="testimonial">"Thanks to Crypto Asset Recovery, I got back over $12,000 I thought was gone forever. Quick and professional!" – Sarah M.</p>
       <p class="testimonial">"Their team was responsive, supportive, and truly effective. Highly recommend them." – James K.</p>
-      <p class="testimonial">"Crypto Asset Recovery gave me peace of mind. I had no idea how to start and they guided me every step." – Daniel P.</p>
     </div>
   </section>
 
